my first protfolio header complite

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h2>Ma<span class="color-orange">r</span>y</h2>
+                <h2>Rak<span class="color-orange">i</span>b</h2>
             </div>
             <ul class="menu">             
                 <li><a href="">portfolio</a></li>
@@ -24,6 +24,22 @@
             </ul>
 
         </nav>
+        <section id="banner">
+            <div class="banner-content">
+                <h2>Hi,I am</h2>
+                <h1>Md.Rakib Hasan</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div id="ok">
+                    <button class="btn">Download CV</button>
+                    <button class="btn">contact</button>
+                </div >
+
+            </div>
+            <div class="banner-image">
+                <img src="images/hardy.png" alt="">
+
+            </div>
+        </section>
 
     </header>
     
