--- a/index.html
+++ b/index.html
@@ -42,5 +42,32 @@
         </section>
 
     </header>
+    <section id="about">
+        <div class="about-container">
+            <div class="section-heading">
+                <h2>About Me</h2>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            </div>
+            <div class="about-info">
+                <div class="info-card">
+                    <p>Name:</p>
+                    <h4>Rakib hasan</h4>
+                </div>
+                <div class="info-card">
+                    <p>Email:</p>
+                    <h4>rh269800@gmail.com</h4>
+                </div>
+                <div class="info-card">
+                    <p>Date of Birth:</p>
+                    <h4>17 november 2006</h4>
+                </div>
+                <div class="info-card">
+                    <p>Form:</p>
+                    <h4>Khagrachari</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
     
 </body>
