--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/porfolio.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />f
 </head>
 <body class="font-open-sans">
     <header>
@@ -30,8 +31,8 @@
                 <h1>Md.Rakib Hasan</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div id="ok">
-                    <button class="btn">Download CV</button>
-                    <button class="btn">contact</button>
+                    <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn"><i class="fa-solid fa-phone"></i> contact</button>
                 </div >
 
             </div>
@@ -98,6 +99,121 @@
             </div>
         </div>
     </section>
+    <section id="resume">
+        <div class="resume-heading">
+            <h2>A summary of My Resume</h2>
+        </div>
+        <div class="resume-container">
+            <div class="education">
+                <h2 class="section-title">My education</h2>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="experience">
+                <h2 class="section-title">My experience</h2>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">
+                        diploma is cst
+                    </h3>
+                    <p class="card-info">cpi 2023-2027 </p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+            </div>
 
+        </div>
+        <div class="text-center">
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+        </div>
+
+    </section>
+ <footer>
+    <section class="footer-container">
+        <div class="social">
+            <h2>Lest connect</h2>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="icon">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <form action="" class="form">
+            <h2>Let's Message me</h2>
+            <div>
+                <input type="text" name="" id=""placeholder="Your name">
+            </div>
+            <div>
+                <input type="text" name="" id=""placeholder="Your email">                        
+            </div>
+            <div>
+                <textarea rows="10" name="" id="" placeholder="Message"></textarea>
+            </div>
+            <input class="btn" type="submit" value="submit">
+        </form>
+    </section>
+ </footer>
     
 </body>
